@@ -1,6 +1,6 @@
 Package: optimx
-Version: 2013.8.8
-Date: 2013-08-08
+Version: 2015.1.21
+Date: 2015-01-21
 Title: A Replacement and Extension of the optim() Function
 Authors@R: c( person(given = c("John", "C"), family = "Nash", role =
     c("aut", "cre"), email = "nashjc@uottawa.ca"), person(given =
@@ -16,9 +16,6 @@ Description: Provides a replacement and extension of the optim()
     many parameters. This is the CRAN version of the package.
 License: GPL-2
 LazyLoad: Yes
-Imports: numDeriv, ucminf, BB, Rcgmin, Rvmmin, minqa, setRNG, dfoptim,
+Imports: numDeriv, ucminf, BB, Rcgmin, Rvmmin, minqa, setRNG, dfoptim, lbfgsb3,
         svUnit
 NeedsCompilation: no
-Repository: CRAN
-Date/Publication: 2013-08-09 16:26:11
-Packaged: 2014-11-12 16:21:57 UTC; john
